# Interference_and_Diffraction_in_OpenGL

./: CMakeLists.txt  README.md
assets/: 2d.fs  2d.vs  downsample.fs  fdm.glsl  filter.vs  gauss.fs  hdr.fs  pbr.fs  pbr.vs  upsample.fs
assets/shaders/: shader.vert
include/: linear.hpp  video.hpp
lib/glew/: CMakeLists.txt
lib/imgui/: CMakeLists.txt
lib/implot/: CMakeLists.txt  implot.h  implot_internal.h
src/backends/: gl.cpp  vk.cpp
src/engine/: canvas.cpp  glfwSurface.cpp  scene.cpp  util.cpp
src/ext/: sceneLoader.cpp
srcTests/: fdm.cpp  test.cpp
